--- a/src/assets/scss/themes/_theme.dark_styles.scss
+++ b/src/assets/scss/themes/_theme.dark_styles.scss
@@ -350,7 +350,8 @@ div.x-friend-list
 
 .el-dialog__body {
     color: $--theme-text-1;
-    word-break: auto-phrase;
+    word-break: break-word;
+    overflow-wrap: break-word;
 }
 
 .el-radio {
